[project]
name = "pyMSO44"
version = "0.0.1"
authors = [
  { name="Federico Cerutti", email="federico@ceres-c.it" },
]
description = "Tektronix MSO44 VISA library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ceres-c/pyMSO44"
"Bug Tracker" = "https://github.com/ceres-c/pyMSO44/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"