[project]
name = "pyMSO4"
version = "0.1"
authors = [
  { name="Federico Cerutti", email="federico@ceres-c.it" },
]
description = "Tektronix MSO4 VISA library"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pyvisa',
  'pyvisa_py'
  'python-usbtmc'
  'pyusb'
]

[project.urls]
"Homepage" = "https://github.com/ceres-c/pyMSO4"
"Bug Tracker" = "https://github.com/ceres-c/pyMSO4/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"